--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Un outil pour créer un calendrier de l'avent à partir d'un fichier en Markdown" />
 	<meta name="author" content="Cédric Eyssette" />
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' href='styles.css'>
+    <link rel='stylesheet' type='text/css' href='styles.min.css'>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -22,7 +22,6 @@
         Outil libre et gratuit créé par <a href="http://eyssette.github.io/">Cédric Eyssette</a><br>🔍 <a href="https://forge.apps.education.fr/eyssette/calendrier-avent">sources sur la Forge</a>
     </footer>
     <script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
-    <script src='calendarHandle.js'></script>
-    <script src='calendarCreate.js'></script>
+    <script src='script.min.js'></script>
 </body>
 </html>
