--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
     </main>
     <footer id="credits">
-        Outil libre et gratuit créé par <a href="http://eyssette.github.io/">Cédric Eyssette</a><br>🔍 <a href="https://forge.apps.education.fr/eyssette/calendrier-avent">sources sur la Forge</a>
+        Outil libre et gratuit créé par <a href="http://eyssette.forge.apps.education.fr/">Cédric Eyssette</a><br>🔍 <a href="https://forge.apps.education.fr/eyssette/calendrier-avent">sources sur la Forge</a>
     </footer>
     <script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
     <script src='script.min.js'></script>
