--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Calendrier de l'avent</title>
     <meta name="description" content="Un outil pour créer un calendrier de l'avent à partir d'un fichier en Markdown" />
-	<meta name="author" content="Cédric Eyssette" />
+    <meta name="author" content="Cédric Eyssette" />
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' href='styles.min.css'>
+    <link rel='stylesheet' type='text/css' href='css/styles.min.css'>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
+
 <body>
     <header>
         <h1 id="title"></h1>
         <div id="initial-message"></div>
     </header>
     <main id="calendar">
-        
+
     </main>
     <footer id="credits">
-        Outil libre et gratuit créé par <a href="http://eyssette.forge.apps.education.fr/">Cédric Eyssette</a><br>🔍 <a href="https://forge.apps.education.fr/eyssette/calendrier-avent">sources sur la Forge</a>
+        Outil libre et gratuit créé par <a href="http://eyssette.forge.apps.education.fr/">Cédric Eyssette</a><br>🔍 <a
+            href="https://forge.apps.education.fr/calendrier-avent/calendrier-avent.forge.apps.education.fr">sources sur
+            la Forge</a>
     </footer>
-    <script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
     <script src='script.min.js'></script>
 </body>
+
 </html>
