--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         <h1 id="title"></h1>
         <div id="initial-message"></div>
     </header>
+    <div class="snowflake">❄️</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❆</div>
+    <div class="snowflake">❄️</div>
+    <div class="snowflake">❅</div>
     <main id="calendar">
 
     </main>
