Améliorations CSS (flocons + initialMessage)

--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
         <h1 id="title"></h1>
         <div id="initial-message"></div>
     </header>
-    <div class="snowflake">❄️</div>
-    <div class="snowflake">❅</div>
-    <div class="snowflake">❆</div>
-    <div class="snowflake">❄️</div>
-    <div class="snowflake">❅</div>
+    <div class="snow-container">
+        <div class="snowflake">❄️</div>
+        <div class="snowflake">❅</div>
+        <div class="snowflake">❆</div>
+        <div class="snowflake">❄️</div>
+        <div class="snowflake">❅</div>
+    </div>
     <main id="calendar">
-
     </main>
     <footer id="credits">
         Outil libre et gratuit créé par <a href="http://eyssette.forge.apps.education.fr/">Cédric Eyssette</a><br>🔍 <a
