feat(accessibility): bouton pour désactiver les effes d'animation

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <h1 id="title"></h1>
         <div id="initial-message"></div>
     </header>
+    <label class="switch" for="snow-toggle" title="Activer ou désactiver les effets d'animation">
+        <input type="checkbox" id="snow-toggle" checked role="switch">
+        <span class="slider round"></span>
+    </label>
     <div class="snow-container">
         <div class="snowflake">❄️</div>
         <div class="snowflake">❅</div>
