fix: accessibilité améliorée (alt vide pour les images + bouton avec aria-label)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <div id="initial-message"></div>
     </header>
     <label class="switch" for="snow-toggle" title="Activer ou désactiver les effets d'animation">
-        <input type="checkbox" id="snow-toggle" checked role="switch">
+        <input type="checkbox" id="snow-toggle" checked role="switch"
+            aria-label="Activer ou désactiver les effets d'animation">
         <span class="slider round"></span>
     </label>
     <div class="snow-container">
